# blog-api-fast-api

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: b1d9ef99df92_initial_schema.py
http/: blog-api.http  http-client.env.json
src/app/: auth.py  config.py  database.py  exception_handlers.py  exceptions.py  main.py  models.py  repository.py  security.py  service.py
src/app/routers/: auth.py  post.py
src/app/schemas/: auth.py  post.py  user.py
tests/: conftest.py  test_auth_api.py  test_post_api.py  test_security.py  test_service.py  util_test.py
